# project2_korotkevich_M25-555-

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  parser.py  types.py  utils.py
