[tool.poetry]
name = "project2-korotkevich-m25-555"
version = "0.1.0"
description = ""
authors = ["Alexander Korotkevich <65502660+Alexander-Korotkevich@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
